--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@anatine/zod-nestjs": "^2.0.12",
     "@anatine/zod-openapi": "^2.2.8",
+    "@aws-sdk/client-s3": "^3.828.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -72,7 +73,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
-    "lint-staged": "^16.0.0",
+    "lint-staged": "^16.1.2",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^4.1.0",
