--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/sanitize-html": "^2.16.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "cloudinary": "^2.7.0",
     "compression": "^1.8.0",
     "dotenv": "^16.5.0",
     "firebase-admin": "^13.4.0",
@@ -72,6 +73,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.5.0",
     "lint-staged": "^16.1.2",
     "pino-pretty": "^13.0.0",
