Fix formatting of API start command in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,11 @@ jobs:
       - name: Build project
         run: yarn build
 
-      - name: Start API with timeout
-        run: yarn start &
+      - name: Start API
+        run: |
+          yarn start &
           sleep 10
+          wait
         env:
           APP_STAGE: ${{ secrets.APP_STAGE }}
           PORT: ${{ secrets.PORT }}
